madcore/templates/kubectl.9102.keycloak.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: keycloak
  name: keycloak
  annotations:
#    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
#    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - signin.madcore.ai
    secretName: keycloak-tls
  rules:
  - host: signin.madcore.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: prod-keycloak-http
          servicePort: 80
